--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ bevy_egui = "0.31"
 egui_file = "0.19"
 serde = "1.0.216"
 serde_json = "1.0.133"
+kira = { version = "0.9.6", features = ["symphonia"] }
