--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ egui_file = "0.19"
 serde = "1.0.216"
 serde_json = "1.0.133"
 kira = { version = "0.9.6", features = ["symphonia"] }
+regex = "1.11.1"
