--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = "1.0.216"
 serde_json = "1.0.133"
 kira = { version = "0.9.6", features = ["symphonia"] }
 regex = "1.11.1"
+ffmpeg-cli = "0.1.0"
+bevy-tokio-tasks = "0.15.0"
