--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.15"
-bevy_egui = "0.31"
-egui_file = "0.19"
+bevy = "0.15.3"
+bevy_egui = "0.33.0"
 serde = "1.0.216"
 serde_json = "1.0.133"
-kira = { version = "0.9.6", features = ["symphonia"] }
+kira = { version = "0.10.4", features = ["symphonia"] }
 regex = "1.11.1"
 ffmpeg-cli = "0.1.0"
 bevy-tokio-tasks = "0.15.0"
 directories = "5.0"
 bevy_image_export = "0.12.0"
+normalize-line-endings = "0.3.0"
+bevy_file_dialog = { git = "https://github.com/eupraxia05/bevy_file_dialog.git" }
