--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ directories = "5.0"
 bevy_image_export = "0.12.0"
 normalize-line-endings = "0.3.0"
 bevy_file_dialog = { git = "https://github.com/eupraxia05/bevy_file_dialog.git" }
+image = "0.25.5"
